--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "link": "^2.1.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
